[tool.poetry]
name = "qemu-rpi-gpio"
version = "0.4"
description = "Simulate GPIOs in qemu-based Raspberry π."
authors = ["Davide Berardi <berardi.dav@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.4"
pexpect = "^4.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
